syntax = "proto3";

package anonymous_vote_admin;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service anonymous_vote_admin {
  rpc SetGroth16VerifierAddress (aelf.Address) returns (google.protobuf.Empty) {}
  rpc GetGroth16VerifierAddress (google.protobuf.Empty) returns (aelf.Address) {
    option (aelf.is_view) = true;
  }
  rpc SetMerkleTreeHistoryContractAddress (aelf.Address) returns (google.protobuf.Empty) {}
  rpc GetMerkleTreeHistoryContractAddress (google.protobuf.Empty) returns (aelf.Address) {
    option (aelf.is_view) = true;
  }
}

message Commit {
  option (aelf.is_event) = true;

  aelf.Hash proposal_id = 1 [(aelf.is_indexed) = true];
  aelf.Hash commitment = 2;
  uint32 leaf_index = 3;
  google.protobuf.Timestamp timestamp = 4;
}